--- a/public/css/css.css
+++ b/public/css/css.css
@@ -162,6 +162,83 @@ h4 {
 }
 
 
+/* error */
+
+.error_box,
+.feedback_box {
+    display: none;
+    width: 100%;
+    height: 100%;
+    background: rgba(194, 193, 193, 0.445);
+    position: fixed;
+    top: 0px;
+    z-index: 20;
+    left: 0px;
+}
+
+.error_colsed,
+.feedback_closed {
+    position: absolute;
+    color: rgb(160, 6, 6);
+    right: 1%;
+    transition: 0.5s;
+}
+
+.error_colsed:hover {
+    color: black;
+    transform: scale(1.2);
+    transition: 0.5s;
+}
+
+.feedback_closed:hover {
+    color: black;
+    transform: scale(1.2);
+    transition: 0.5s;
+}
+
+.feedback {
+    width: 50px;
+    height: 50px;
+    padding: 15px 19px;
+    box-sizing: border-box;
+    border-radius: 50%;
+    bottom: 15%;
+    right: 1%;
+    z-index: 21;
+    background: rgb(160, 6, 6);
+    color: white;
+    transition: 0.5s;
+}
+
+.feedback:hover {
+    background: black;
+    color: white;
+    transform: scale(1.1);
+    transition: 0.5s;
+}
+
+.error {
+    width: 50px;
+    height: 50px;
+    padding: 15px 22px;
+    box-sizing: border-box;
+    border-radius: 50%;
+    bottom: 6%;
+    right: 1%;
+    z-index: 21;
+    background: rgb(160, 6, 6);
+    color: white;
+    transition: 0.5s;
+}
+
+.error:hover {
+    background: black;
+    color: white;
+    transform: scale(1.1);
+    transition: 0.5s;
+}
+
+
 /* col */
 
 .col-padding {
@@ -189,6 +266,10 @@ h4 {
 
 .col-position {
     position: relative;
+}
+
+.col-position--fixed {
+    position: fixed;
 }
 
 .col-margin--none {
