--- a/public/css/css.css
+++ b/public/css/css.css
@@ -76,6 +76,11 @@ body {
     margin: 0px auto;
 }
 
+#not_seen_box,
+#watched_box {
+    display: none;
+}
+
 
 /*  */
 
@@ -98,11 +103,33 @@ a {
 
 a:hover {
     text-decoration: none;
-    color: gray;
+    color: rgb(160, 6, 6);
+}
+
+h4,
+h5 {
+    margin: 5px 5px;
+}
+
+h2 {
+    font-size: 20px;
+    font-family: sans-serif;
+}
+
+h3 {
+    font-size: 16px;
 }
 
 h4 {
-    margin: 5px 5px;
+    font-size: 15px;
+}
+
+textarea {
+    resize: none;
+}
+
+p {
+    margin: 0px;
 }
 
 
@@ -144,6 +171,7 @@ h4 {
 
 .list-vertical li {
     padding: 10px 0px;
+    box-sizing: border-box;
 }
 
 .list-category li {
@@ -164,6 +192,93 @@ h4 {
 
 .img-border-radius {
     border-radius: 50%;
+}
+
+
+/* uploand  file */
+
+.file-upload {
+    background-color: #ffffff;
+    width: 100%;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+
+.file-upload-content {
+    display: none;
+    text-align: center;
+}
+
+.file-upload-input {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.image-upload-wrap {
+    margin-top: 20px;
+    border: 4px dashed gray;
+    position: relative;
+}
+
+.image-dropping,
+.image-upload-wrap:hover {
+    background-color: gray;
+}
+
+.image-title-wrap {
+    padding: 0 15px 15px 15px;
+    color: #222;
+}
+
+.drag-text {
+    text-align: center;
+}
+
+.drag-text h3 {
+    font-weight: 100;
+    text-transform: uppercase;
+    color: black;
+    padding: 60px 0;
+}
+
+.file-upload-image {
+    max-height: 200px;
+    max-width: 200px;
+    margin: auto;
+    padding: 20px;
+}
+
+.remove-image {
+    width: 200px;
+    margin: 0;
+    color: #fff;
+    background: #cd4535;
+    border: none;
+    padding: 10px;
+    border-radius: 4px;
+    border-bottom: 4px solid #b02818;
+    transition: all .2s ease;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.remove-image:hover {
+    background: #c43222;
+    color: white;
+    transition: all .2s ease;
+    cursor: pointer;
+}
+
+.remove-image:active {
+    border: 0;
+    transition: all .2s ease;
 }
 
 
@@ -512,7 +627,6 @@ h4 {
 
 .menu-nav__ul li a {
     padding: 15px 15px;
-    text-transform: uppercase;
     font-weight: bold;
     color: rgb(0, 0, 0);
 }
@@ -624,8 +738,32 @@ h4 {
     color: white;
 }
 
+.results_search {
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+    margin-top: 0px;
+    overflow: auto;
+    max-height: 200px;
+    background: rgb(255, 254, 254);
+}
+
+.results_search a {
+    margin: 2px;
+    box-sizing: border-box;
+    background: rgb(207, 207, 207);
+}
+
 
 /* popular-post */
+
+.text-danger {
+    color: #e3342f
+}
+
+.box-shadow {
+    box-shadow: 0 1.1px 5.3px rgba(0, 0, 0, 0.013), 0 3.6px 17.9px rgba(0, 0, 0, 0.033), 0 16px 80px rgba(0, 0, 0, 0.07);
+}
 
 .popular-post {
     background: #ffffff;
@@ -641,8 +779,9 @@ h4 {
 /* footer */
 
 footer {
-    background: #000000;
+    box-shadow: 0 1.1px 5.3px rgba(0, 0, 0, 0.013), 0 3.6px 17.9px rgba(0, 0, 0, 0.033), 0 16px 80px rgba(0, 0, 0, 0.07);
     padding: 50px;
+    background: #ffffff;
 }
 
 
@@ -868,8 +1007,14 @@ footer {
     .icon {
         display: block;
     }
-    .menu-none nav {
+    .menu-none .menu-nav {
         display: none;
+    }
+    .menu-none.responsive .menu-nav {
+        float: none;
+        display: block;
+        text-align: left;
+        border-right: none;
     }
     .menu-none.responsive {
         position: relative;
@@ -878,12 +1023,6 @@ footer {
         position: absolute;
         right: 0;
         top: 0;
-    }
-    .menu-none.responsive>nav {
-        float: none;
-        display: block;
-        text-align: left;
-        border-right: none;
     }
     .menu-nav .menu-nav__ul li {
         float: none;
@@ -949,6 +1088,16 @@ footer {
     .popular-post .row .col-9 {
         width: 75%;
     }
+    .post .row {
+        display: flex;
+    }
+    .post .row .col-3 {
+        width: 25%;
+        margin: 0px 5px;
+    }
+    .post .row .col-9 {
+        width: 75%;
+    }
     /* .col-right {
         text-align: left;
     }  */
@@ -975,6 +1124,21 @@ footer {
     .popular-post .row .col-10 {
         width: 75%;
     }
+    /*  */
+    .post .col-2 img {
+        width: 80px;
+    }
+    .post .row {
+        display: flex;
+    }
+    .post .row .col-2 {
+        width: 25%;
+        margin: 0px 5px;
+    }
+    .post .row .col-10 {
+        width: 75%;
+    }
+    /*  */
     .menuheader {
         display: flex;
     }
@@ -996,5 +1160,22 @@ footer {
     }
     .popular-post .row .col-10 {
         width: 100%;
+    }
+    .popular-post .row .col-2 img {
+        width: 80px;
+    }
+    /*  */
+    .post .col-2 img {
+        width: 80px;
+    }
+    .post .row {
+        display: flex;
+    }
+    .post .row .col-2 {
+        width: 25%;
+        margin: 0px 5px;
+    }
+    .post .row .col-10 {
+        width: 75%;
     }
 }
