--- a/public/css/css.css
+++ b/public/css/css.css
@@ -84,6 +84,23 @@ body {
 
 /*  */
 
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td,
+th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+th {
+    background-color: #dddddd;
+}
+
 i {
     padding-right: 5px;
 }
