--- a/public/css/css.css
+++ b/public/css/css.css
@@ -3,6 +3,7 @@ body {
     /* background: #ffffff; */
     margin: 0px;
     color: rgb(41, 40, 40);
+    font-size: 15px;
 }
 
 .row {
@@ -37,6 +38,7 @@ body {
 .col-6 {
     width: 50%;
     margin: 0px 5px;
+    box-sizing: border-box;
 }
 
 .col-7 {
@@ -73,9 +75,12 @@ body {
 }
 
 .content {
-    width: 85%;
+    width: 80%;
     margin: 0px auto;
 }
+
+
+/*  */
 
 #not_seen_box,
 #watched_box {
@@ -87,12 +92,11 @@ body {
 
 .pagination {
     position: relative;
-    text-align: justify;
     margin: 0px auto;
 }
 
 .pagination li {
-    padding: 10px 15px;
+    padding: 5px 10px;
     box-sizing: border-box;
     margin-left: 2px;
     float: left;
@@ -195,7 +199,7 @@ p {
 
 .list-horizontal,
 .list-vertical {
-    margin: 0px;
+    margin-top: 2px;
 }
 
 
@@ -203,7 +207,7 @@ p {
 
 .list-horizontal li {
     display: inline-block;
-    margin-left: 5px;
+    /* margin-left: 5px; */
     padding-right: 10px;
     margin-bottom: 10px;
 }
@@ -414,7 +418,7 @@ p {
 }
 
 .col-padding {
-    padding: 15px 25px;
+    padding: 10px 15px;
     box-sizing: border-box;
 }
 
@@ -434,6 +438,10 @@ p {
 
 .col-left {
     text-align: left;
+}
+
+.col-float-right {
+    float: right;
 }
 
 .col-float {
@@ -464,14 +472,17 @@ p {
 
 .col-margin--bottom {
     margin-bottom: 20px;
+    box-sizing: border-box;
 }
 
 .col-margin-left {
     margin-left: 20px;
+    box-sizing: border-box;
 }
 
 .col-margin--top {
     margin-top: 15px;
+    box-sizing: border-box;
 }
 
 .col-border-radius-admin {
@@ -513,6 +524,10 @@ p {
 
 .col-border-bottom {
     border-bottom: 1px rgb(77, 77, 77) solid;
+}
+
+.font-size-13 {
+    font-size: 13px;
 }
 
 
@@ -563,6 +578,13 @@ p {
 }
 
 
+/*  */
+
+.height-image {
+    height: 55px;
+}
+
+
 /* color */
 
 .color-gray {
@@ -608,6 +630,27 @@ p {
     width: 100%;
     padding: 15px;
     box-sizing: border-box;
+    outline: 0;
+}
+
+.btn_like {
+    font-size: 20px;
+    padding: 5px;
+    background: none;
+    color: rgb(7, 7, 7);
+    border: none;
+}
+
+.btn_like:hover {
+    color: rgb(160, 6, 6);
+}
+
+.btn_like:active {
+    background: rgba(197, 196, 196, 0.514);
+    border-radius: 50%;
+}
+
+.btn_like:focus {
     outline: 0;
 }
 
@@ -900,7 +943,7 @@ p {
 }
 
 .results_search a {
-    margin: 2px;
+    margin-bottom: 5px;
     box-sizing: border-box;
     background: rgb(207, 207, 207);
 }
@@ -1075,7 +1118,7 @@ footer {
         font-size: 20px;
     }
     h4 {
-        font-size: 15px;
+        font-size: 14px;
     }
     .list-category li {
         padding: 3% 10px;
@@ -1167,7 +1210,10 @@ footer {
         padding-right: 5px;
     }
     .list-horizontal li a {
-        font-size: 15px;
+        font-size: 13px;
+    }
+    .h4_reponsive {
+        font-size: 13px;
     }
     /* error */
     .error,
