--- a/public/css/login.css
+++ b/public/css/login.css
@@ -30,6 +30,7 @@
     padding: 15px 30px;
     box-sizing: border-box;
     margin-top: 20px;
+    border: 1px solid #E5E5E5;
 }
 
 .is-invalid {
@@ -61,6 +62,7 @@
 }
 
 .form__input textarea {
+    border: 1px solid #E5E5E5;
     width: 100%;
     padding: 15px 30px;
     box-sizing: border-box;
