--- a/public/css/css.css
+++ b/public/css/css.css
@@ -6,6 +6,10 @@ body {
     font-size: 15px;
 }
 
+img {
+    object-fit: cover !important;
+}
+
 .row {
     display: flex;
     justify-content: space-between;
@@ -255,6 +259,7 @@ button:focus {
 
 .img {
     width: 100%;
+    object-fit: cover;
 }
 
 .img-border-radius {
@@ -493,6 +498,11 @@ button:focus {
 
 .col-margin-left {
     margin-left: 20px;
+    box-sizing: border-box;
+}
+
+.box-margin--top {
+    margin-top: 5%;
     box-sizing: border-box;
 }
 
@@ -1015,6 +1025,7 @@ button:focus {
 
 .height_img {
     height: 180px;
+    object-fit: cover;
 }
 
 .text-danger {
@@ -1057,6 +1068,7 @@ footer {
 
 .text-contect-post img {
     width: 100%;
+    object-fit: cover;
 }
 
 .text-contect-post p {
@@ -1173,14 +1185,11 @@ footer {
 
 .popular-post .col-2 img {
     width: 60px;
+    object-fit: cover;
 }
 
 
 /* Comment Post*/
-
-
-
-
 
 .form-textarea {
     width: 100%;
@@ -1193,7 +1202,7 @@ footer {
     padding: 10px 15px;
     border-radius: 3px;
     margin-bottom: 8px;
-      -webkit-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -1209,7 +1218,7 @@ footer {
     font-size: 14px;
     transition-duration: 0.4s;
     cursor: pointer;
-      -webkit-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -1246,7 +1255,7 @@ footer {
 
 .comments-container {
     width: 100%;
-      -webkit-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -1280,7 +1289,7 @@ footer {
     position: absolute;
     left: 22px;
     top: 0;
-      -webkit-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -1297,7 +1306,7 @@ footer {
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
-      -webkit-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -1315,7 +1324,7 @@ footer {
     position: absolute;
     top: 21px;
     left: -28px;
-      -webkit-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -1339,7 +1348,7 @@ footer {
     clear: both;
     margin-top: 15px;
     box-sizing: border-box;
-      -webkit-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -1359,17 +1368,19 @@ footer {
     border-radius: 4px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     overflow: hidden;
-      -webkit-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
 .comments-list .comment-avatar img {
     width: 35px;
+    object-fit: cover;
 }
 
 .reply-list .comment-avatar img {
     width: 35px;
+    object-fit: cover;
 }
 
 .comment-main-level:after {
@@ -1379,7 +1390,6 @@ footer {
     margin-bottom: 20px;
     display: block;
     clear: both;
-
 }
 
 
@@ -1392,7 +1402,7 @@ footer {
     border: 1px solid rgba(177, 177, 177, 0.3);
     border-radius: 2px;
     box-sizing: border-box;
-      -webkit-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -1409,7 +1419,7 @@ footer {
     border-color: transparent #FCFCFC;
     top: 8px;
     left: -11px;
-      -webkit-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -1421,14 +1431,13 @@ footer {
 }
 
 .comment-box .comment-head {
-    
     padding: 5px 5px;
     border-bottom: 1px solid #E5E5E5;
     overflow: hidden;
     -webkit-border-radius: 4px 4px 0 0;
     -moz-border-radius: 4px 4px 0 0;
     border-radius: 4px 4px 0 0;
-      -webkit-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -1454,11 +1463,10 @@ footer {
 }
 
 .comment-box .comment-content {
-    width:100%;
-      -webkit-box-sizing: border-box;
+    width: 100%;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-   
     padding: 5px;
     font-size: 15px;
     color: #595959;
@@ -1483,7 +1491,7 @@ footer {
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-      -webkit-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -1492,8 +1500,6 @@ footer {
 /** =====================
 * Responsive
 ========================*/
-
-
 
 
 /* reponsive */
@@ -1707,6 +1713,7 @@ footer {
     }
     .popular-post .col-2 img {
         width: 80px;
+        object-fit: cover;
     }
     .popular-post .row {
         display: flex;
@@ -1721,6 +1728,7 @@ footer {
     /*  */
     .post .col-2 img {
         width: 80px;
+        object-fit: cover;
     }
     .post .row {
         display: flex;
@@ -1757,10 +1765,12 @@ footer {
     }
     .popular-post .row .col-2 img {
         width: 80px;
+        object-fit: cover;
     }
     /*  */
     .post .col-2 img {
         width: 80px;
+        object-fit: cover;
     }
     .post .row {
         display: flex;
