--- a/public/css/css.css
+++ b/public/css/css.css
@@ -39,7 +39,6 @@ img {
 
 .col-5 {
     width: 41.665%;
-    margin-right: 5px;
     box-sizing: border-box;
 }
 
@@ -57,7 +56,6 @@ img {
 
 .col-8 {
     width: 66.664%;
-    margin-right: 5px;
     box-sizing: border-box;
 }
 
@@ -226,15 +224,17 @@ button:focus {
 /* list-horizontal  */
 
 .list-horizontal li {
+    font-size: 13px;
     display: inline-block;
-    /* margin-left: 5px; */
+    color: rgb(145, 145, 145);
     padding-right: 4px;
     margin-bottom: 10px;
 }
 
 .list-horizontal li a {
+    font-size: 13px;
     font-weight: bold;
-    color: rgb(160, 6, 6);
+    color: rgb(90, 89, 89);
 }
 
 
@@ -1040,7 +1040,7 @@ button:focus {
 
 .popular-post {
     background: #ffffff;
-    margin-bottom: 10px;
+    margin-bottom: 4px;
     box-shadow: 0 1.1px 5.3px rgba(0, 0, 0, 0.013), 0 3.6px 17.9px rgba(0, 0, 0, 0.033), 0 16px 80px rgba(0, 0, 0, 0.07);
 }
 
